This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.14.2 (UNRELEASED)
-------------------
 * Delay the import of the glob and re modules in the python apport hook,
   and only import them when needed. Speeds up interpreter startup time
   by 50%. Thanks Matthias Klose! (LP: #1307684)

2.14.1 (2014-04-04)
-------------------
 * Fix FileNotFoundError from temporary launchpadlib cache dir cleanup.
   (LP: #1300474)
 * ui.py, open_url(): Skip any Python cleanup/atexit handlers in the forked
   xdg-open child, to avoid calling them twice. (Side issue of LP #1300474 and
   #1282713)
 * apport-kde: Work around crash in sip by skipping the destructors of SIP
   objects. Thanks Rohan Garg! (LP: #1282713)

2.14 (2014-03-31)
-----------------
 * Add KernelCrash reports when iwlwifi encounters a firmware error (via the
   "error_dump" uevent and the new iwlwifi_error_dump helper). Thanks Seth
   Forshee!
 * launchpad: Really use a temporary launchpadlib cache dir by default. This
   avoids piling up gigabytes of useless cached data over time, which also
   tends to break every now and then.
 * Fix crash in logind session detection. Thanks Dimitri Ledkov! (LP: #1296026)

2.13.3 (2014-03-07)
-------------------
 * Fix backend_apt_dpkg.test_get_file_package_uninstalled test that got broken
   in the previous release.
 * etc/cron.daily/apport: Cleanup .drkonqi files after 7 days. Thanks Harald
   Sitter.
 * ui.py: Try to grab session D-BUS address from user's session when being
   called through pkexec. (LP: #1287460)

2.13.2 (2014-01-27)
-------------------
 * Fix crash if systemd cgroup is unreadable in /sys, such as in containers.
   (LP: #1270783)
 * apt/dpkg: Also consider Contents.gz from updates/security/proposed pockets,
   so that e. g. apport-retrace works for crash reports with files that are new
   in those. Thanks to Brian Murray for the initial patch. (LP: #1271258)